Add references section with images and links

--- a/index.html
+++ b/index.html
@@ -115,6 +115,15 @@
     <!-- References Section -->
     <section id="references" class="text-center tree-vector-bg tree-vector-bg-green py-5">
         <div class="container my-5">
+            <h2 class="text-primary">POMÁHÁME</h2>
+            <div class="row mt-4">
+                <div class="col-md-4 mb-3">
+                    <p>Pomáhali jsme sázet a organizovat celou akci <a href="https://www.sazimebudoucnost.cz/akce/liniova-vysadba-brezany-i" target="_blank">Liniová výsadba - Břežany I</a></p>
+                    <a href="https://www.sazimebudoucnost.cz/akce/liniova-vysadba-brezany-i" target="_blank">
+                        <img src="img/liniova-vysadba.jpg" class="img-fluid" alt="Liniová výsadba">
+                    </a>
+                </div>
+            </div>
             <h2 class="text-primary">REFERENCE</h2>
             <div class="row mt-4">
                 <div class="col-md-4 mb-3">
