Modify references section layout and content
Updated the layout of the references section for better alignment and added a line break in the description.

--- a/index.html
+++ b/index.html
@@ -117,8 +117,8 @@
         <div class="container my-5">
             <h2 class="text-primary">POMÁHÁME</h2>
             <div class="row mt-4">
-                <div class="col-md-4 mb-3">
-                    <p>Pomáhali jsme sázet a organizovat celou akci <a href="https://www.sazimebudoucnost.cz/akce/liniova-vysadba-brezany-i" target="_blank">Liniová výsadba - Břežany I</a></p>
+                <div class="col-md-6 mb-3 mx-auto">
+                    <p>Pomáhali jsme sázet a organizovat celou akci<br> <a href="https://www.sazimebudoucnost.cz/akce/liniova-vysadba-brezany-i" target="_blank">Liniová výsadba - Břežany I</a></p>
                     <a href="https://www.sazimebudoucnost.cz/akce/liniova-vysadba-brezany-i" target="_blank">
                         <img src="img/liniova-vysadba.jpg" class="img-fluid" alt="Liniová výsadba">
                     </a>
